[gd_scene load_steps=7 format=2]

[ext_resource path="res://spaceship/modular_ship.png" type="Texture" id=1]
[ext_resource path="res://spaceship/Spaceship.gd" type="Script" id=2]
[ext_resource path="res://spaceship/CannonModule.tscn" type="PackedScene" id=3]
[ext_resource path="res://spaceship/BridgeModule.tscn" type="PackedScene" id=4]
[ext_resource path="res://spaceship/CannonModule.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 76.4871, 128.174 )

[node name="Spaceship" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ModuleManager" type="Node2D" parent="."]

[node name="BridgeModule" parent="ModuleManager" instance=ExtResource( 4 )]
position = Vector2( 35.75, -71.5 )

[node name="CannonModule" parent="ModuleManager" instance=ExtResource( 3 )]
position = Vector2( -35.75, -71.5001 )
script = ExtResource( 5 )

[node name="PlayerManager" type="Node" parent="."]
